--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,5 @@ include_directories(include/)
 add_executable(rtow src/rtow.cpp
         src/vec3.h
         src/color.h
-        src/ray.h)
+        src/ray.h
+        src/sphere.h)
